Swap fonts to prevent layout shift.

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -1,6 +1,9 @@
 @import "nes";
 @import "press_start_font";
 
+$base-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
 // Main styles.
 *,
 *::before,
@@ -16,8 +19,8 @@ html {
 
 body {
   -webkit-font-smoothing: antialiased;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-display: swap;
+  font-family: $base-font;
   font-size: 16px;
   margin: 1rem;
 }
@@ -25,7 +28,8 @@ body {
 header,
 h1,
 footer {
-  font-family: "press-start";
+  font-display: swap;
+  font-family: "press-start", $base-font;
 }
 
 header,
